--- a/team-soj/SojTeamGame/SojTeamGame/Info.plist
+++ b/team-soj/SojTeamGame/SojTeamGame/Info.plist
@@ -25,7 +25,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>QRCodeStoryboard</string>
+	<string>TapStarbucks</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
